Refatoracao entity e DTO